--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,16 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+}
+
 plugins {
     id 'java'
     id 'idea'
     id 'maven'
+    id 'maven-publish'
     id 'net.researchgate.release' version '2.4.1'
+    id "com.jfrog.bintray" version "1.7"
 }
 
 ext {
@@ -33,17 +41,34 @@ task(printversion) << {
 beforeReleaseBuild.dependsOn startmessage
 afterReleaseBuild.dependsOn printversion
 
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+            groupId 'org.jfrog.example.gradle'
+            artifactId 'gradle-bintray-plugin-example'
+            version '1.0'
+        }
+    }
+}
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "http://pkayjava.ddns.net:8081/repository/maven-releases/") {
-                authentication(userName: "admin", password: "admin123")
-            }
-            pom.groupId = 'com.angkorteam.gradle';
-            pom.artifactId = 'plugin-task'
-            pom.version = '1.0'
-            pom.packaging = 'jar'
+bintray {
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    publications = ['MyPublication']
+    pkg {
+        repo = 'maven'
+        name = 'Plugin-Task'
+        userOrg = ''
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/PkayJava/Plugin-Task.git'
+        labels = ['Socheat KHAUV', 'PkayJava']
+        publicDownloadNumbers = true
+        version {
+            name = '1.0-Final'
+            desc = 'Gradle-Plugin-Task '
+            vcsTag = '1.3.0'
+            attributes = ['gradle-plugin': 'ccom.angkorteam.gradle:plugin-task']
         }
     }
 }
