--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
-version=1.0.3-SNAPSHOT
 group='com.angkorteam.gradle'
+artifact='plugin-task'
+version=1.0.3-SNAPSHOT
+packaging='jar'
+bintrayUser=socheat
+bintrayApiKey=d38e509f1bcaa91dc662cc9b8fb44b8761e4ef3f
