--- a/build.gradle
+++ b/build.gradle
@@ -45,9 +45,9 @@ publishing {
     publications {
         MyPublication(MavenPublication) {
             from components.java
-            groupId 'org.jfrog.example.gradle'
-            artifactId 'gradle-bintray-plugin-example'
-            version '1.0'
+            groupId project.property('group')
+            artifactId project.property('artifact')
+            version project.property('version')
         }
     }
 }
@@ -65,9 +65,9 @@ bintray {
         labels = ['Socheat KHAUV', 'PkayJava']
         publicDownloadNumbers = true
         version {
-            name = '1.0-Final'
+            name = project.property('version')
             desc = 'Gradle-Plugin-Task'
-            vcsTag = '1.3.0'
+            vcsTag = project.property('version')
             attributes = ['gradle-plugin': 'ccom.angkorteam.gradle:plugin-task']
         }
     }
