--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group='com.angkorteam.gradle'
-artifact='plugin-task'
+artifact='plugintask'
 version=1.0.5-SNAPSHOT
 packaging='jar'
 bintrayUser=socheat
