--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,31 @@ task(printversion) << {
     println project.version
 }
 
+task(bintrayTask) << {
+    bintray {
+        user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+        key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+        publications = ['MyPublication']
+        pkg {
+            repo = 'maven'
+            name = 'Plugin-Task'
+            userOrg = ''
+            licenses = ['Apache-2.0']
+            vcsUrl = 'https://github.com/PkayJava/Plugin-Task.git'
+            labels = ['Socheat KHAUV', 'PkayJava']
+            publicDownloadNumbers = true
+            version {
+                name = project.property('version')
+                desc = 'Gradle-Plugin-Task'
+                vcsTag = project.property('version')
+                attributes = ['gradle-plugin': 'ccom.angkorteam.gradle:plugin-task']
+            }
+        }
+    }
+}
+
 beforeReleaseBuild.dependsOn startmessage
-afterReleaseBuild.dependsOn printversion
+afterReleaseBuild.dependsOn printversion, bintrayTask
 
 publishing {
     publications {
@@ -48,27 +71,6 @@ publishing {
             groupId 'com.angkorteam.gradle'
             artifactId 'plugintask'
             version project.version
-        }
-    }
-}
-
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    publications = ['MyPublication']
-    pkg {
-        repo = 'maven'
-        name = 'Plugin-Task'
-        userOrg = ''
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/PkayJava/Plugin-Task.git'
-        labels = ['Socheat KHAUV', 'PkayJava']
-        publicDownloadNumbers = true
-        version {
-            name = project.property('version')
-            desc = 'Gradle-Plugin-Task'
-            vcsTag = project.property('version')
-            attributes = ['gradle-plugin': 'ccom.angkorteam.gradle:plugin-task']
         }
     }
 }
