--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,6 @@ task(startmessage) << {
 
 task(printversion) << {
     println project.version
-}
-
-task(bintrayTask) << {
     bintray {
         user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
         key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
@@ -62,7 +59,7 @@ task(bintrayTask) << {
 }
 
 beforeReleaseBuild.dependsOn startmessage
-afterReleaseBuild.dependsOn printversion, bintrayTask
+afterReleaseBuild.dependsOn printversion
 
 publishing {
     publications {
