--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ release {
 }
 
 task(startmessage) << {
-    println 'starting build'
+    println 'starting build' + project.version
 }
 
 task(printversion) << {
@@ -70,6 +70,5 @@ bintray {
     }
 }
 
-release.dependsOn bintrayUpload
 beforeReleaseBuild.dependsOn startmessage
 afterReleaseBuild.dependsOn printversion
