--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group='com.angkorteam.gradle'
 artifact='plugintask'
-version=1.0.11
+version=1.0.12-SNAPSHOT
 packaging='jar'
 bintrayUser=socheat
 bintrayApiKey=d38e509f1bcaa91dc662cc9b8fb44b8761e4ef3f
